# Django-E-commers-Course

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build_vercel.sh  compose.yaml  manage.py  nixpacks.toml  pyproject.toml  requirements.txt  run_ruff.py  run_tests.py  start.sh  varcel.json  vercel.json
.github/: copilot-instructions.md
.github/workflows/: django.yaml
account/: admin.py  backends.py  emails.py  forms.py  mixins.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_client_options.py  0003_alter_client_dni.py  0004_alter_client_dni.py  0005_alter_client_phone.py
cart/: admin.py  cart.py  urls.py  views.py
common/account/: stubs.py
common/order/: stubs.py
common/views/: client.py
common/web/: stubs.py
edshop/: asgi.py  settings.py  urls.py  wsgi.py
order/: admin.py  models.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_alter_orderdetail_options.py  0003_alter_order_status.py  0004_alter_order_total_price_alter_orderdetail_subtotal.py  0005_alter_order_total_price_alter_orderdetail_subtotal.py  0006_alter_order_client.py  0007_alter_orderdetail_order.py
payment/: urls.py  views.py
static/css/: base.css  bootstrap.css  chosen.css  elements.css  flexslider.css  font-awesome.min.css  ion.rangeSlider.css  jquery.fancybox.css  jquery.formstyler.css  jquery.mThumbnailScroller.css  landing.css  media.css  optimiced.css  order_summary.css  payment_success.css  style.css
static/css/components/: breadcrumbs.css  filter.css  forms.css  order-summary.css  pagination.css  toast.css
static/css/layout/: footer.css  header.css
static/css/pages/: 404.css  auth.css  cart.css  catalog.css  landing.css  order.css  payment-completed.css  pending-orders.css  product.css
static/js/: cartPageControl.js  catalogIntersectionObserver.js  darkmode.js  emailResetConfirmForm.js  emailValidation.js  jquery-plugins.js  main.js  orderPageControl.js  passwordTypeToggle.js  payment_completed_confetti.js  payment_success_confetti.js  shareButton.js  toastBehavior.js
static/less/: bootstrap.less  chosen.less  elements-media.less  elements.less  flexslider.less  font-awesome.min.less  jquery.formstyler.less  media.less  style.less  styles.less
templates/: 404.html  account.html  base.html  carrito.html  cart.html  cuenta.html  gracias.html  index.html  layout.html  login.html  order.html  payment.html  payment_canceled.html  payment_completed.html  pedido.html  product.html  producto.html  shipping.html  signup.html  thanks.html  user_orders.html
templates/account/: account.html  email_validation.html  login.html  signup.html
templates/account/activation/: account-activation-email.html  account-activation.html  account_activation.html
templates/account/password/: change_done.html  change_form.html  reset-confirm.html  reset-email.html  reset.html  reset_confirm.html  reset_done.html  reset_email.html
templates/includes/: footer.html  header-cart.html  header.html  header_carrito.html  header_cart.html  messages.html  navbar.html  pending_orders.html  related.html  top-info.html  top_info.html
templates/includes/catalog/: brands.html  catalog.html  categories.html
templates/includes/catalogo/: catalogo.html  categorias.html
templates/includes/crispy_fields/: confirm_password.html  email.html  new-password2.html  new_password.html  password.html
templates/order/: order-summary.html  order.html  order_summary.html  shipping.html
templates/payment/: payment-completed.html  payment_completed.html
templates/web/: index.html  landing.html  product.html
templates/web/includes/: brands.html  catalog.html
tests/: conftest.py  parametrizes.py  status.py  test_account_views.py  test_order_views.py  test_web_views.py
tests/account/: conftest.py  test_forms.py  test_integration.py  test_models.py  test_views.py
tests/cart/: conftest.py  test_integration.py  test_views.py
tests/common/: status.py
tests/order/: conftest.py  test_integration.py  test_views.py
tests/payment/: conftest.py  test_additional_scenarios.py  test_integration.py  test_views.py
tests/web/: conftest.py  test_integration.py  test_views.py
web/: admin.py  cart.py  forms.py  models.py  tests.py  urls.py  views.py
web/migrations/: 0001_initial.py  0002_alter_brand_image_alter_product_image.py  0002_alter_product_image.py  0003_product_color_product_dimension_product_weight_brand_and_more.py  0004_alter_product_description.py  0005_client_order_orderdetail_and_more.py
