[project]
name = "django-e-commers-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.8.1",
    "asttokens==3.0.0",
    "certifi==2024.12.14",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.1",
    "cloudinary>=1.44.0",
    "colorama==0.4.6",
    "decorator==5.1.1",
    "distlib==0.3.9",
    "django==5.1.4",
    "executing==2.1.0",
    "filelock==3.16.1",
    "flake8==7.1.1",
    "gunicorn>=23.0.0",
    "identify==2.6.5",
    "idna==3.10",
    "iniconfig==2.0.0",
    "ipython==8.31.0",
    "jedi==0.19.2",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "nodeenv==1.9.1",
    "packaging==24.2",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "pip>=25.0",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "prompt-toolkit==3.0.48",
    "psycopg>=3.2.4",
    "psycopg2>=2.9.10",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycodestyle==2.12.1",
    "pyflakes==3.2.0",
    "pygments==2.19.1",
    "pytest==8.3.4",
    "pytest-django==4.9.0",
    "python-decouple==3.8",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "stripe==11.4.1",
    "traitlets==5.14.3",
    "types-psycopg2==2.9.21.20241019",
    "types-pyyaml==6.0.12.20241230",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.3.0",
    "virtualenv==20.28.1",
    "wcwidth==0.2.13",
    "whitenoise",
]

[project.optional-dependencies]
django = [
    "django-stubs>=5.1.1",
    "django-stubs-ext>=5.1.1",
    "django-types>=0.20.0",
]

[tool.ruff]
show-fixes = true
lint.extend-select = [
    "A",    # flake8-builtins
    "AIR",  # Airflow
    "ARG",  # flake8-unused-arguments
    "ASYNC",# flake8-async
    "B",    # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",   # flake8-comprehensions
    "C90",  # mccabe
    "COM",  # flake8-commas
    "DJ",   # flake8-django
    "DTZ",  # flake8-datetimez
    "EM",   # flake8-errmsg
    "ERA",  # eradicate
    "EXE",  # flake8-executable
    "FA",   # flake8-future-annotations
    "FBT",  # flake8-boolean-trap
    "FIX",  # flake8-fixme
    "FLY",  # flynt
    "F",    # Pyflakes
    "FURB", # refurb
    "G",    # flake8-logging-format
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "INP",  # flake8-no-pep420
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "N",    # pep8-naming
    "PERF", # Perflint
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",   # Pylint
    "PT",   # flake8-pytest-style
    "PYI",  # flake8-pyi
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "RUF",  # Ruff-specific rules
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "SIM",  # flake8-simplify
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TC",   # flake8-type-checking
    "TD",   # flake8-todos
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
]
lint.ignore = [
    "ARG002",
    "ARG003",
    "FBT001",
    "FBT002",
    "PLR6301",
    "RUF012",
    "RUF100",
    "TRY300",
]
[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.3",
]
