[project]
name = "django-e-commers-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudinary>=1.44.0",
    "django>=5.1.4",
    "gunicorn>=23.0.0",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "pytest-django>=4.11.1",
    "python-decouple>=3.8",
    "stripe>=11.4.1",
    "whitenoise>=6.9.0",
]

[project.optional-dependencies]
types-stubs = [
    "django-stubs>=5.2.0",
    "django-stubs-ext>=5.2.0",
    "django-types>=0.20.0",
]

[dependency-groups]
dev = [
    "django-livereload-server>=0.5.1",
    "ipython>=9.2.0",
    "pre-commit>=4.2.0",
    "python-decouple-stubs>=3.8.0.4",
    "ruff>=0.11.11",
]
